# kaption

./: .gitignore  AUTHORS  CHANGELOG  CMakeLists.txt  COPYING  INSTALL  README.md  TODO  cmakeit.sh
po/: CMakeLists.txt  CTestTestfile.cmake  kaption.pot
po/cs/: CMakeLists.txt  CTestTestfile.cmake  kaption.po
po/de/: CMakeLists.txt  CTestTestfile.cmake  kaption.po
po/el/: CMakeLists.txt  CTestTestfile.cmake  kaption.po
po/it/: CMakeLists.txt  CTestTestfile.cmake  kaption.po
po/ru/: CMakeLists.txt  CTestTestfile.cmake  kaption.po
po/uk/: CMakeLists.txt  CTestTestfile.cmake  kaption.po
src/: CMakeLists.txt  CTestTestfile.cmake  FindPackageLog.txt  colorpropertytooleditor.cpp  colorpropertytooleditor.h  fontpropertytooleditor.cpp  grabber.cpp  grabber.h  graphicsitemfactory.cpp  kaption.desktop  kaption.kcfg  kaption_automoc.cpp.files  kaptionapplication.cpp  kaptionapplication.h  kaptiongraphicstoolkit.cpp  main.cpp  numberpropertytooleditor.cpp  numberselector.cpp  propertytooleditor.h  saveimagedirselectdialog.cpp  saveimagedirselectdialog.h  scale.cpp  scalepropertytooleditor.cpp  settings.kcfgc  snapshotpreview.cpp  snapshotpreview.h  snapshotpreview.ui  trayicon.cpp  trayicon.h  uploadprogressdialog.cpp  uploadprogressdialog.h
src/data/: kaption.notifyrc
src/graphic/: snapshotcanvas.cpp  snapshotcanvas.h
src/graphic/items/: abstractgraphicsrectitem.cpp  abstractgraphicsrectitem.h  arrowgraphicsitem.cpp  arrowgraphicsitem.h  numbereditem.cpp  numbereditem.h
src/icons/: CMakeLists.txt  CTestTestfile.cmake
src/settings/: ftpuploadsettingspage.cpp  ftpuploadsettingspage.h  ftpuploadsettingspage.ui  generalsettingspage.cpp  generalsettingspage.h  generalsettingspage.ui  kaptionsettingsdialog.cpp  kaptionsettingsdialog.h
